# barn

./: .gitignore  Cargo.toml  Makefile.toml  README.md  config.toml
src/: main.rs
src/adapters/: cursor.rs  editor_buffer.rs  editor_rows.rs  mod.rs  status_message.rs  terminal_io.rs
src/app/: editor_app.rs  mod.rs
src/domain/: editor.rs
src/ports/: config.rs  cursor.rs  editor.rs  editor_buffer.rs  editor_rows.rs  mod.rs  status_message.rs  terminal_io.rs
src/seeds/: README.md
src/seeds/essentials/: README.md  grass.rs
src/tools/: logger.rs
