[package]
name = "barn"
version = "0.0.1"
authors = ["Radu Gafita <radugaf@gmail.com"]
readme = "README.md"
license = "MIT"
keywords = ["barn", "editor", "text", "terminal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
crossterm = "0.27.0"
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }